tests/cases/errors/mod_capability_impl.ring
// expect-error: E0405
mod pure requires {} {
    struct Foo { x: Int }

    impl Foo {
        fn show(self) -> Unit with {io} {
            print("hello")
        }
    }
}
